Update PyRiemann dependency

--- a/timeflux/requirements.txt
+++ b/timeflux/requirements.txt
@@ -4,4 +4,4 @@ timeflux_dsp==0.3.1
 timeflux_brainflow==0.6.0
 timeflux_openbci==0.4.0
 timeflux_hackeeg==0.3.0
-git+https://github.com/pyRiemann/pyRiemann#egg=pyrieman
+pyriemann==0.2.7
